# bitptr

./: Cargo.toml  README.md
src/: copy.rs  dangling.rs  fill.rs  lib.rs  null.rs  swap.rs
src/ptr/: mod.rs  subbyte.rs
